fix: :lipstick: Fix body background on dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
     padding: 0;
     font-family: sans-serif;
     color: var(--secondary-color);
+}
+
+body {
     background-color: var(--primary-color-alpha);
 }
 
